[gd_scene load_steps=9 format=2]

[ext_resource path="res://Inventory/HotbarSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Inventory/Hotbar.gd" type="Script" id=2]
[ext_resource path="res://Inventory_legacy/Hotbar/hotbar_bg.png" type="Texture" id=4]
[ext_resource path="res://Theme.tres" type="Theme" id=5]
[ext_resource path="res://UI/Minecraftia-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ActiveItemLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ActiveItemLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "" ]
}

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ActiveItemLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1, 1.5 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ActiveItemLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[node name="Hotbar" type="CenterContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -23.0
margin_bottom = -17.0
theme = ExtResource( 5 )
script = ExtResource( 2 )

[node name="InventoryBg" type="NinePatchRect" parent="."]
margin_left = 108.0
margin_right = 212.0
margin_bottom = 6.0
rect_min_size = Vector2( 104, 6 )
texture = ExtResource( 4 )
patch_margin_left = 3
patch_margin_top = 2
patch_margin_right = 21
patch_margin_bottom = 3
axis_stretch_horizontal = 1

[node name="HotbarSlots" type="GridContainer" parent="InventoryBg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -9.0
margin_right = 49.0
margin_bottom = 9.0
custom_constants/hseparation = 2
columns = 8

[node name="HotbarSlot1" parent="InventoryBg/HotbarSlots" instance=ExtResource( 1 )]

[node name="HotbarSlot2" parent="InventoryBg/HotbarSlots" instance=ExtResource( 1 )]
margin_left = 20.0
margin_right = 38.0

[node name="HotbarSlot3" parent="InventoryBg/HotbarSlots" instance=ExtResource( 1 )]
margin_left = 40.0
margin_right = 58.0

[node name="HotbarSlot4" parent="InventoryBg/HotbarSlots" instance=ExtResource( 1 )]
margin_left = 60.0
margin_right = 78.0

[node name="HotbarSlot5" parent="InventoryBg/HotbarSlots" instance=ExtResource( 1 )]
margin_left = 80.0
margin_right = 98.0

[node name="Control" type="Control" parent="."]
margin_left = 160.0
margin_top = 3.0
margin_right = 160.0
margin_bottom = 3.0

[node name="ActiveItemLabel" type="Label" parent="Control"]
margin_left = -14.0
margin_top = -20.0
margin_right = 11.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 1 )

[node name="LabelAnimation" type="AnimationPlayer" parent="Control"]
anims/RESET = SubResource( 2 )
anims/show = SubResource( 3 )
